--- a/css/style.css
+++ b/css/style.css
@@ -1,237 +1,249 @@
 header {
-  text-align: center;
-  color: #fff;
+    text-align: center;
+    color: #fff;
 }
 
 html {
-  overflow: auto;
-  height: 100%;
+    overflow: auto;
+    height: 100%;
 }
 
 body {
-  font-family: 'メイリオ','Meiryo','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','ＭＳ ゴシック','MS Gothic',monospace;
-  color: #333;
-  padding-top: 65px;
-  padding-bottom: 15px;
-  background: url(../img/bg.jpg) top center !important;
+    font-family: 'メイリオ', 'Meiryo', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'ＭＳ ゴシック', 'MS Gothic', monospace;
+    color: #333;
+    padding-top: 65px;
+    padding-bottom: 15px;
+    background: url(../img/bg.jpg) top center !important;
 }
 
 a {
-  transition: color .2s linear;
-  text-decoration: none;
-  color: #9cf;
+    transition: color .2s linear;
+    text-decoration: none;
+    color: #9cf;
 }
 
 h1 {
-  margin-left: 15px;
+    margin-left: 15px;
 }
 
 a:hover {
-  text-decoration: underline;
-  color: #9a9a9a;
+    text-decoration: underline;
+    color: #9a9a9a;
 }
 
 p {
-  margin-left: 30px;
+    margin-left: 30px;
 }
 
 h3 {
-  margin-left: 15px;
+    margin-left: 15px;
 }
 
 hr {
-  background-color: #fff;
-  border-top: 2px dashed #8c8b8b;
+    background-color: #fff;
+    border-top: 2px dashed #8c8b8b;
 }
 
 .sk-folding-cube {
-  margin: 20px auto;
-  width: 40px;
-  height: 40px;
-  position: relative;
-  transform: rotateZ(45deg);
+    margin: 20px auto;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    transform: rotateZ(45deg);
 }
 
 .sk-folding-cube .sk-cube {
-  float: left;
-  width: 50%;
-  height: 50%;
-  position: relative;
-  transform: scale(1.1);
+    float: left;
+    width: 50%;
+    height: 50%;
+    position: relative;
+    transform: scale(1.1);
 }
 
 .sk-folding-cube .sk-cube:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #333;
-  animation: sk-foldCubeAngle 2.4s infinite linear both;
-  transform-origin: 100% 100%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    animation: sk-foldCubeAngle 2.4s infinite linear both;
+    transform-origin: 100% 100%;
 }
 
 .sk-folding-cube .sk-cube2 {
-  transform: scale(1.1) rotateZ(90deg);
+    transform: scale(1.1) rotateZ(90deg);
 }
 
 .sk-folding-cube .sk-cube3 {
-  transform: scale(1.1) rotateZ(180deg);
+    transform: scale(1.1) rotateZ(180deg);
 }
 
 .sk-folding-cube .sk-cube4 {
-  transform: scale(1.1) rotateZ(270deg);
+    transform: scale(1.1) rotateZ(270deg);
 }
 
 .sk-folding-cube .sk-cube2:before {
-  animation-delay: .3s;
+    animation-delay: .3s;
 }
 
 .sk-folding-cube .sk-cube3:before {
-  animation-delay: .6s;
+    animation-delay: .6s;
 }
 
 .sk-folding-cube .sk-cube4:before {
-  animation-delay: .9s;
+    animation-delay: .9s;
 }
 
 @keyframes sk-foldCubeAngle {
-  0%,10% {
-    transform: perspective(140px) rotateX(-180deg);
-    opacity: 0;
-  }
-
-  25%,75% {
-    transform: perspective(140px) rotateX(0deg);
-    opacity: 1;
-  }
-
-  90%,100% {
-    transform: perspective(140px) rotateY(180deg);
-    opacity: 0;
-  }
+    0%,
+    10% {
+        transform: perspective(140px) rotateX(-180deg);
+        opacity: 0;
+    }
+    25%,
+    75% {
+        transform: perspective(140px) rotateX(0deg);
+        opacity: 1;
+    }
+    90%,
+    100% {
+        transform: perspective(140px) rotateY(180deg);
+        opacity: 0;
+    }
 }
 
 .spinner-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: url(../img/bg.jpg) top center !important;
-  z-index: 999999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url(../img/bg.jpg) top center !important;
+    z-index: 999999;
 }
 
 .spinner {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 33%;
-  left: 50%;
-  margin: 100px auto;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 33%;
+    left: 50%;
+    margin: 100px auto;
 }
 
+
 /** **/
+
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+    margin-right: -15px;
+    margin-left: -15px;
 }
 
 .containerbody {
-  width: 1140px;
-  max-width: 100%;
-  background: #fff;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  border-radius: 25px;
+    width: 1140px;
+    max-width: 100%;
+    background: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 25px;
 }
 
 .homebox {
-  list-style: none;
-  margin: 0 auto;
-  padding: 0;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .homebox li {
-  padding-bottom: 5px;
-  height: 100px;
-  position: relative;
-  margin: 0;
-  padding: 0;
+    padding-bottom: 5px;
+    height: 100px;
+    position: relative;
+    margin: 0;
+    padding: 0;
 }
 
-li img:hover {
-  opacity: .5;
+li .avatar:hover {
+    opacity: .5;
 }
 
 .spinner p {
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  left: -38%;
-  margin: 100px auto;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: -38%;
+    margin: 100px auto;
 }
 
 .homebox li {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .homebox img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .image {
-  list-style: none;
-  margin: 0 auto;
-  margin-top: 15px;
+    list-style: none;
+    margin: 0 auto;
+    margin-top: 15px;
 }
 
 .image li {
-  padding-bottom: 15px;
-  padding-top: 15px;
-  margin-bottom: 15px;
-  margin-top: 15px;
-  position: relative;
-  margin: 0;
-  padding: 0;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    position: relative;
+    margin: 0;
+    padding: 0;
 }
 
 .image img {
-  display: inline-block;
-  float: left;
-  margin-left: 0;
-  margin-right: 5px;
+    display: inline-block;
+    float: left;
+    margin-left: 0;
+    margin-right: 5px;
 }
 
 .footer p {
-  margin: 0;
+    margin: 0;
 }
+
 .footer img {
-  max-width: 100%;
+    max-width: 100%;
 }
+
 .footer ul li a {
-  padding: 0 0 5px 0;
-  display: block;
+    padding: 0 0 5px 0;
+    display: block;
 }
+
 .footer a {
-  color: #78828D
+    color: #78828D
 }
 
 .footer-bottom p.pull-left {
-  padding-top: 6px;
+    padding-top: 6px;
 }
 
 #particles-js {
-  position: fixed;
-  z-index: 1;
-  width: 84%;
-  height: 100%; 
+    position: fixed;
+    z-index: 1;
+    width: 84%;
+    height: 100%;
 }
-.containerbody{
-  background-color: #fdfcfa;
+
+.containerbody {
+    background-color: #fdfcfa;
 }
+
+.image li{
+  background-color: #fff
+}
+
